--- a/index.html
+++ b/index.html
@@ -7,8 +7,52 @@
 	<style type="text/css"></style>
 </head>
 <body>
+
+GOOD Logo
+
+INTRO
+THESIS
+MESSAGING
+DESIGN
+
+ABOUT THIS PAGE
+
+
 ___ LIKE YOU GIVE A DAMN.
 
-Test test test
+Introduction
+We are a community of individuals sharing creative ideas for living well and doing good.
+Together, we are building a platform for empowering people to push and measure the good they live everyday.
+
+Thesis
+Not Altruism.
+The best way to better the world is to help people better themselves.
+
+Ethos
+We believe that information, creativity, actions and fun help individuals become amazing human beings. This in turn helps the world become a better one to live in. 
+We believe an individual can choose both to live well and do good. (Never needing to choose one over the other.)
+
+Methodology
+We are (animated: bold, playful, smart, honest, driven)
+These qualities come across all designs and messages we craft – digital, print or in-person.
+
+Tone of Voice
+...
+
+Copy Basics
+...
+
+Typography
+...
+
+Color
+...
+
+Iconography
+...
+
+Imagery
+...
+
 </body>
 </html>
